--- a/index.html
+++ b/index.html
@@ -196,17 +196,33 @@ Ať už se chystáte na hřiště nebo do ulic, tento dres vám přinese pocit, 
 <br><br>
 
 
-<div id="uff4" class="parallax3 text-center d-flex text-white align-items-center "> 
-  <div class="  s123">
+<div id="uff4" class="parallax3 text-center d-flex text-white align-items-center"> 
+  <div class="s123">
     <ul style="list-style-type: none; padding-left: 0; font-size: 1.5rem;">
       <li><strong style="font-size: 2rem;">TopDresyCZ</strong></li>
       <li>E-mail: <a href="mailto:info@topdresycz.cz" class="text-white" style="font-size: 1.5rem;">info@topdresycz.cz</a></li>
       <li>Telefon: <a href="tel:+420775123456" class="text-white" style="font-size: 1.5rem;">+420 775 123 456</a></li>
       <li>Adresa provozovny: Sportovní 22, 110 00 Praha 1</li>
-      <li>Web: <a href="https://www.topdresycz.cz" target="_blank" class="text-white" style="font-size: 1.5rem;">www.topdresycz.cz</a></li>
+      <li>Web: <a href="https://bumbis1337.github.io/TopDresyCZ/" target="_blank" class="text-white" style="font-size: 1.5rem;">www.topdresycz.cz</a></li>
       <li>IČO: 12345678</li>
       <li>DIČ: CZ12345678</li>
     </ul>
+    <div style="margin-top: 10px;">
+      <a href="https://www.toplist.cz" id="toplistcz1839526" title="TOPlist">
+        <noscript>
+          <img src="https://toplist.cz/count.asp?id=1839526&logo=bc&njs=1" border="0" alt="TOPlist" width="44" height="60"/>
+        </noscript>
+        <script>
+          (function(d,e,s) {
+            d.getElementById('toplistcz1839526').innerHTML = 
+              '<img src="https://toplist.cz/count.asp?id=1839526&logo=bc&http=' +
+              e(d.referrer) + '&t=' + e(d.title) + '&l=' + e(d.URL) +
+              '&wi=' + e(s.width) + '&he=' + e(s.height) + '&cd=' + e(s.colorDepth) +
+              '" width="44" height="60" border="0" alt="TOPlist" />';
+          }(document, encodeURIComponent, window.screen));
+        </script>
+      </a>
+    </div>
   </div>
 </div>
 
@@ -275,15 +291,22 @@ function isElementInViewport(el) {
       rect.bottom <= (window.innerHeight || document.documentElement.clientHeight))
   );
 }
+
+
+
+
+
+
     </script>
 
+
+<footer class="footer">
+  <br>
+  <p>&copy; 2025 TopDresyCZ</p>
+</footer>
+
   </main>
-  <footer>
-    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-    ©
-    TopDresy CZ
-  </div></footer>
-  
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" 
   integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 
